[gd_scene load_steps=15 format=3 uid="uid://bm06lfr6pie77"]

[ext_resource type="Script" path="res://Characters/Character.gd" id="1_07lw5"]
[ext_resource type="Script" path="res://Characters/CharacterController.gd" id="2_5fpsv"]
[ext_resource type="Script" path="res://Characters/SpriteController.gd" id="2_l81vt"]
[ext_resource type="Shader" path="res://Characters/hurt_flash.gdshader" id="3_1yd5r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pm4ee"]
resource_local_to_scene = true
shader = ExtResource("3_1yd5r")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="Gradient" id="Gradient_exdsh"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.360784, 0.643137, 0.313726)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_djydw"]
gradient = SubResource("Gradient_exdsh")

[sub_resource type="Gradient" id="Gradient_0dt05"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ylqql"]
gradient = SubResource("Gradient_0dt05")

[sub_resource type="Animation" id="Animation_h5b13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_53mig"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_dmdyt"]
resource_name = "hurt_r"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(10, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_31tws"]
_data = {
"RESET": SubResource("Animation_h5b13"),
"hurt": SubResource("Animation_53mig"),
"hurt_r": SubResource("Animation_dmdyt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_wdgvb"]
radius = 20.0

[node name="Character" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_07lw5")

[node name="Controller" type="Node2D" parent="."]
script = ExtResource("2_5fpsv")

[node name="Sprite" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_pm4ee")
script = ExtResource("2_l81vt")

[node name="Polygon2D" type="Polygon2D" parent="Sprite"]
use_parent_material = true
texture = SubResource("GradientTexture1D_djydw")
polygon = PackedVector2Array(-40, -80, 40, -80, 40, 20, -40, 20)
metadata/_edit_lock_ = true

[node name="Polygon2D" type="Polygon2D" parent="Sprite/Polygon2D"]
use_parent_material = true
texture = SubResource("GradientTexture1D_ylqql")
polygon = PackedVector2Array(0, -80, 40, 0, 0, 20)

[node name="HurtAnim" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_31tws")
}

[node name="hurt_cd" type="Timer" parent="Sprite"]
process_callback = 0
wait_time = 0.4
one_shot = true

[node name="action_cd" type="Timer" parent="Sprite"]
process_callback = 0
one_shot = true

[node name="turn_cd" type="Timer" parent="Sprite"]
wait_time = 0.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wdgvb")
